[package]
name = "Dictionary"
version = "0.1.0"
authors = ["dylan <dylan_w2014@outlook.com>"]
edition = "2018"
license = "MIT"
description = "Basic \"dictionary\" facilities."
homepage = "https://github.com/MonkeyToiletLadder/Dictionary"
reposiory = "https://github.com/MonkeyToiletLadder/Dictionary"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"